--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,18 +3,18 @@ build-backend = "poetry.masonry.api"
 requires = ["poetry>=0.12"]
 
 [tool]
-
 [tool.poetry]
 authors = ["Your Name <you@example.com>"]
 description = ""
 name = "repl_python3_RotiBot"
 version = "0.1.0"
-
 [tool.poetry.dependencies]
+PyNaCl = "^1.4.0"
 discord = "^1.0.1"
+discord-py-slash-command = "^3.0.0"
+flask = "^1.1.2"
+numpy = "^1.20.3"
 python = "^3.8"
 replit = "^3.0.0"
-flask = "^1.1.2"
-discord-py-slash-command = "^1.1.2"
-numpy = "^1.20.3"
+wavelink = "^0.9.10"
 [tool.poetry.dev-dependencies]
