--- a/requirements.txt
+++ b/requirements.txt
@@ -58,6 +58,7 @@ pure_eval==0.2.3
 pycparser==2.22
 pyee==11.1.1
 Pygments==2.19.1
+pymediawiki==0.7.5
 pymongo==4.10.1
 PyNaCl==1.5.0
 pyppeteer==2.0.0
@@ -68,6 +69,7 @@ pyzmq==26.2.0
 referencing==0.35.1
 requests==2.32.3
 requests-html==0.10.0
+returns==0.24.0
 rpds-py==0.22.3
 six==1.17.0
 soupsieve==2.6
