--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,13 +39,13 @@ jobs:
 
     - name: Build Docker image
       run: |
-        docker build -t "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA" \
-          -t "gcr.io/$PROJECT_ID/$IMAGE:latest" .
+        docker build -t "us-central1-docker.pkg.dev/$PROJECT_ID/rotibot/rotibot:$GITHUB_SHA" \
+          -t "us-central1-docker.pkg.dev/$PROJECT_ID/rotibot/rotibot:latest" .
 
     - name: Push Docker image
       run: |
-        docker push "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
-        docker push "gcr.io/$PROJECT_ID/$IMAGE:latest"
+        docker push "us-central1-docker.pkg.dev/$PROJECT_ID/rotibot/rotibot:$GITHUB_SHA"
+        docker push "us-central1-docker.pkg.dev/$PROJECT_ID/rotibot/rotibot:latest"
 
     - name: Create/Update secrets in GKE
       run: |
