Reduced resource requirements

--- a/k8s/lavalink-deployment.yaml
+++ b/k8s/lavalink-deployment.yaml
@@ -141,11 +141,11 @@ spec:
           subPath: application.yml
         resources:
           requests:
+            memory: "256Mi"
+            cpu: "250m"
+          limits:
             memory: "512Mi"
             cpu: "500m"
-          limits:
-            memory: "1Gi"
-            cpu: "1000m"
         livenessProbe:
           httpGet:
             path: /
