Fix for logging handlers

--- a/utils/logging_config.json
+++ b/utils/logging_config.json
@@ -37,8 +37,7 @@
         "class": "logging.handlers.QueueHandler",
         "handlers": [
           "stdout",
-          "stderr",
-          "file_json"
+          "stderr"
         ],
         "respect_handler_level": true
       }
