--- a/utils/logging_config.json
+++ b/utils/logging_config.json
@@ -24,7 +24,7 @@
       "stdout": {
         "class": "logging.StreamHandler",
         "level": "INFO",
-        "formatter": "simple",
+        "formatter": "json",
         "stream": "ext://sys.stdout"
       },
       "stderr": {
@@ -33,20 +33,11 @@
         "formatter": "simple",
         "stream": "ext://sys.stderr"
       },
-      "file_json": {
-        "class": "logging.handlers.RotatingFileHandler",
-        "level": "WARNING",
-        "formatter": "json",
-        "filename": "logs/roti.log.jsonl",
-        "maxBytes": 10485760,
-        "backupCount": 3
-      },
       "queue_handler": {
         "class": "logging.handlers.QueueHandler",
         "handlers": [
           "stdout",
-          "stderr",
-          "file_json"
+          "stderr"
         ],
         "respect_handler_level": true
       }
