--- a/k8s/lavalink-deployment.yaml
+++ b/k8s/lavalink-deployment.yaml
@@ -121,6 +121,9 @@ spec:
     metadata:
       labels:
         app: lavalink
+      annotations:
+        # This annotation will change when ConfigMap changes, triggering a rollout
+        checksum/config: "CONFIGMAP_HASH"
     spec:
       containers:
       - name: lavalink
@@ -150,6 +153,22 @@ spec:
           limits:
             memory: "512Mi"
             cpu: "500m"
+        livenessProbe:
+          httpGet:
+            path: /version
+            port: 2333
+          initialDelaySeconds: 60
+          periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
+        readinessProbe:
+          httpGet:
+            path: /version
+            port: 2333
+          initialDelaySeconds: 30
+          periodSeconds: 5
+          timeoutSeconds: 3
+          failureThreshold: 3
       volumes:
       - name: config
         configMap:
